--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
 	Paradigm Shift by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 */
 
 html, body, div, span, applet, object,
@@ -3880,3 +3881,15 @@ input, select, textarea {
 		}
 
 	}
+@media (max-width: 600px) {
+ 
+ 
+
+  /* Change header color */
+  h1, h2, h3 {
+    color: #660000; /* Example: gold */
+  }
+
+ 
+
+}
